// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea> that renders a textarea should add classes when props are changed 1`] = `
<div>
  <textarea
    class="TextArea TextArea--size_large TextArea--isBlock"
    disabled=""
  />
</div>
`;

exports[`<TextArea> that renders a textarea should render default textarea correctly 1`] = `
<div>
  <textarea
    class="TextArea"
  >
    Some value
  </textarea>
</div>
`;
